# DynamicMeshUnity

./: .gitmodules
Plugin/: .gitignore  CMakeLists.txt
Plugin/include/: dynamic_mesh.hpp  dynmesh.h  dynmesh.hpp
Plugin/src/: dynamic_mesh.cpp  dynmesh.cc  dynmesh.cpp
Plugin/test/: main.cc  main.cpp
UnityProject/: .gitignore
UnityProject/Assets/: DllInvoke.cs  SurfaceManager.cs  SurfaceNode.cs
UnityProject/Assets/Scenes/: SampleScene.unity  SurfaceManager.prefab  SurfaceNode.prefab
UnityProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
